# neo

./: .cshrc  .gitignore  .login  .webui_secret_key  README.md  quiz_03.csv  quiz_03_MovieChart.csv
ai-1/: requirements.txt
ai-1/1_openai/: requirements.txt
ai-1/2_llamindex/: p172_app.py  p173_app.py  p176_app.py  p178_app.py  p179_app.py  p180_app.py  p182_app.py  p183_app.py  p184_app.py  p189_app.py  p190_app.py  p195_app.py  (+2 more)
c/: add.c  calc.c  checkeod.c  checkprime.c  endian.c  eod  eod.c  libeod.c  prime.c
col_project/: Makefile  app.py  ecos.py  main_countries.json
db/: hr_stdclubtbl.sql  shop_buytbl.sql  shop_usertbl.sql  st_info.sql  testdb_st_info.sql
html/: index.html  source
java/: gugudan.java
mysql/: st_grade.sql
oracle/: .myterror.ctl.swp  CentOS_HR.sql  data_import.sh  hr_buytbl.sql  hr_usertbl.sql  myterror.ctl  myterror_table.sql  package.json  reinstall.sh  shop_membertbl.sql  shop_producttbl.sql  shop_user_create.sql  shop_usertbl.sql  testdb_st_grade.sql
python/uv-demo/: pyproject.toml  requirements.txt
ruby/: connect.rb  emp_find.rb  emp_insert.rb  emp_update.rb  hello.rb
shells/: case.sh  case1.sh  case_new.sh  diffText  file.sh  for1.sh  for2.sh  getopt.sh  getopt_new.sh  hello.sh  if1.sh  if2.sh  ifelif.sh  logic.sh  logic_new.sh  logic_new2.sh  newfile.sh  pattern1.sh  pattern2.sh  pattern3.sh  pattern4.sh  readfile.sh  split-test  split.sh  string1.sh  string3.sh  string5.sh  string6.sh  test-data  useradd.sh  useradd_file.sh  useradd_opt.sh  userdel.sh  userdel_file.sh  while.sh  while1.sh  while2.sh  while3.sh  while4.sh
(+714 files in other folders)
