[project]
name = "uv-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kuzu==0.7.1",
    "lancedb==0.17.0",
    "llama-index==0.12.8",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-graph-stores-kuzu==0.6.0",
    "llama-index-llms-opena1==0.3.12",
    "llama-index-vector-stores-lancedb==0.3.0",
    "numpy==2.2.1",
    "polars==1.18.0",
    "pyarrow==18.1.0",
    "python-dotenv==1.0.1",
]
